# minesweeper-cli

./: .gitignore  LICENCE  README.md  main.py  requirements.txt  setup.cfg
minesweeper/: __main__.py  api.py  main.py
