[metadata]
name = minesweeper
version = 0.0.1
description = a cli for a minesweeper game server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vancomm/minesweeper-cli
author = Ivan Peshekhonov
author_email = peshekhonov.ip@gmail.com
license = MIT
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python-requires = >=3.9
install_requires =
    requests
    colorama

[options.entry_points]
console_scripts =
    mines = minesweeper.main:main